add book version

--- a/creJupyter/Dockerfile
+++ b/creJupyter/Dockerfile
@@ -106,7 +106,9 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
    echo "$(date +'%F %R') \t  jupyterhub \t $(jupyterhub --version 2>&1)" >> /cre/versions.txt  && \
    echo "$(date +'%F %R') \t  jupyterlab \t $(jupyter lab --version 2>&1)" >> /cre/versions.txt  && \
    echo "$(date +'%F %R') \t  jupyter \t $(jupyter --version | grep core 2>&1)" >> /cre/versions.txt  && \
+   echo "$(date +'%F %R') \t  jupyter-book \t $(jupyter-book --version 2>&1)" >> /cre/versions.txt && \
    echo "$(date +'%F %R') \t  notebook \t $(jupyter notebook --version 2>&1)" >> /cre/versions.txt 
+
 
 
 COPY cre /cre
