91mError: Ipython executable not found

--- a/creJupyter/Dockerfile
+++ b/creJupyter/Dockerfile
@@ -100,8 +100,12 @@ RUN sbcl --non-interactive --load /cre/quicklisp.lisp
 RUN mkdir /cre/cl && \ 
    wget https://github.com/fredokun/cl-jupyter/archive/master.zip -O /cre/cl-jupyter.zip && \
    unzip /cre/cl-jupyter.zip -d /cre/cl 
-RUN cd /cre/cl/cl-jupyter-master && \
-   python3 ./install-cl-jupyter.py
+
+## Bug:
+# RUN cd /cre/cl/cl-jupyter-master && \
+#   python3 ./install-cl-jupyter.py
+
+## [91mError: Ipython executable not found
  
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
    echo "$(date +'%F %R') \t creJupyter \t $JUPYTER_VERSION" >> /cre/versions.txt  && \
