--- a/creTensorflow/Dockerfile
+++ b/creTensorflow/Dockerfile
@@ -87,6 +87,10 @@ RUN pip3 install pytorch-lightning
 RUN curl https://raw.githubusercontent.com/automl/Auto-PyTorch/master/requirements.txt | xargs -n 1 -L 1 pip3 install
 RUN mkdir -p /cre && cd /cre && git clone https://github.com/automl/Auto-PyTorch.git && cd Auto-PyTorch && python3 setup.py install && cd /cre 
 
+# AutoKeras
+# https://machinelearningmastery.com/autokeras-for-classification-and-regression/
+RUN pip3 install autokeras
+
 # Add stanza 
 # https://stanfordnlp.github.io/stanza/
 # https://github.com/stanfordnlp/stanza
