sleep not found...

--- a/creTensorflow/Dockerfile
+++ b/creTensorflow/Dockerfile
@@ -64,7 +64,7 @@ RUN ldconfig
 RUN curl https://raw.githubusercontent.com/automl/auto-sklearn/master/requirements.txt | xargs -n 1 -L 1 pip3 install
 RUN pip3 install auto-sklearn
 
-## Install torch
+## PyTorch:  https://pytorch.org
 RUN pip3 install torch torchvision
 # https://github.com/PyTorchLightning/pytorch-lightning
 RUN pip3 install pytorch-lightning
@@ -116,4 +116,4 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 
 #EXPOSE 8000
 
-CMD ["sleep 1000000"]
+CMD "sleep 1000000"
