switch to tensorflow version 2.3.0

--- a/creTensorflow/Dockerfile
+++ b/creTensorflow/Dockerfile
@@ -19,7 +19,8 @@ ARG BUILD_TAG=latest
 #ENV DEBIAN_FRONTEND noninteractive 
 #ENV INITRD No
 #ENV LANG en_US.UTF-8
-ENV TENSORFLOW_VERSION 1.14.0 
+#ENV TENSORFLOW_VERSION 1.14.0 
+ENV TENSORFLOW_VERSION 2.3.0 
 
 LABEL Name="Tensorflow for CRE" \
       CRE=$CRE_VERSION \ 
