--- a/creSpring/cre/maven-spring-boot/src/main/resources/application.properties
+++ b/creSpring/cre/maven-spring-boot/src/main/resources/application.properties
@@ -10,9 +10,13 @@ spring.thymeleaf.cache=false
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # spring.jpa.hibernate.ddl-auto=none
 # spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://crepostgis:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # spring.datasource.initialization-mode=always
 # spring.datasource.initialize=true
