--- a/creSpring/cre/maven-spring-boot/pom.xml
+++ b/creSpring/cre/maven-spring-boot/pom.xml
@@ -80,11 +80,16 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
-
+                <dependency>
+	                <groupId>org.projectlombok</groupId>
+	                <artifactId>lombok</artifactId>
+	                <scope>provided</scope>
+	        </dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
