First install then copy to initialize

--- a/creSpring/Dockerfile
+++ b/creSpring/Dockerfile
@@ -46,8 +46,11 @@ RUN mkdir -p /cre/spring
 #RUN cp -R /cre/maven-spring-boot /cre/spring/app
 ##RUN mv /cre/maven-spring-boot /cre/spring/app
 ##RUN cp /cre/DemoApplication.java /cre/spring/app/src/main/java/com/cre/demo/DemoApplication.java
-COPY cre/maven-spring-boot /cre/spring/app
-COPY cre/DemoApplication.java /cre/spring/app/src/main/java/com/cre/demo/DemoApplication.java
+
+#COPY cre/maven-spring-boot /cre/spring/app
+#COPY cre/DemoApplication.java /cre/spring/app/src/main/java/com/cre/demo/DemoApplication.java
+RUN cd /cre/maven-spring-boot && ./mvnw clean install
+#  mvn -N io.takari:maven:wrapper 
 
 
 WORKDIR /cre/spring/app
