--- a/creSpring/cre/maven-spring-boot/pom.xml
+++ b/creSpring/cre/maven-spring-boot/pom.xml
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
-                        <!--  3.8.9  -->
+                        <version>3.8.9</version>
 		</dependency>
                 <!--dependency>
                         <groupId>org.liquigraph</groupId>
