--- a/creErlang/Dockerfile
+++ b/creErlang/Dockerfile
@@ -35,8 +35,7 @@ wget -O- https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc | sud
 #18
 RUN echo "deb https://packages.erlang-solutions.com/ubuntu bionic contrib" | sudo tee /etc/apt/sources.list.d/erlang.list
 
-RUN apt update && /
-    apt install erlang
+RUN apt update -y  && apt install -y erlang
 
  
 
