conda init and update

--- a/creAnaconda/Dockerfile
+++ b/creAnaconda/Dockerfile
@@ -38,7 +38,8 @@ LABEL Name="Anaconda for CRE" \
 RUN wget https://repo.anaconda.com/archive/Anaconda3-2020.07-Linux-x86_64.sh -O /cre/anaconda.sh && \
     chmod +x /cre/anaconda.sh && \
     bash /cre/anaconda.sh -b
-
+RUN /cre/anaconda3/bin/conda init bash
+RUN /cre/anaconda3/bin/conda update -n base -c defaults conda
 
 ## /cre/anaconda3/bin/conda
 
