--- a/creRabbitmq/Dockerfile
+++ b/creRabbitmq/Dockerfile
@@ -15,7 +15,7 @@ ARG BUILD_TAG=latest
 
 # version: yyyy.n for stable versions / 0.yyyy for development
 ENV INITRD No
-ENV RABBITMQ_VERSION 2.4.0
+ENV RABBITMQ_VERSION 3.8.0
 
 LABEL Name="RabbitMQ for CRE" \
       CRE=$CRE_VERSION \ 
@@ -34,9 +34,6 @@ RUN apt install apt-transport-https -y
 RUN wget -O- https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.asc | sudo apt-key add -
 RUN wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -
 
-
-
-
 #--- Ubuntu 20.04 ---
 # echo "deb https://dl.bintray.com/rabbitmq-erlang/debian focal erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
 
@@ -48,8 +45,9 @@ RUN apt update  -y  && apt install  -y rabbitmq-server
 
 RUN rabbitmq-plugins enable rabbitmq_management
 
-
-
+# delay plugin
+RUN wget https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases/download/v${RABBITMQ_VERSION}/rabbitmq_delayed_message_exchange-{RABBITMQ_VERSION}.ez  -O ${RABBITMQ_PLUGINS_DIR}/rabbitmq_delayed_message_exchange-{RABBITMQ_VERSION}.ez
+RUN rabbitmq-plugins enable rabbitmq_delayed_message_exchange
 
 
 
