--- a/creRabbitmq/Dockerfile
+++ b/creRabbitmq/Dockerfile
@@ -42,14 +42,17 @@ RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian bionic erlang-22.x" 
 
 
 RUN apt update  -y  && apt install  -y rabbitmq-server
-
 RUN rabbitmq-plugins enable rabbitmq_management
+
+RUN rabbitmq-plugins list
+RUN rabbitmq-plugins directories -s
+
+#ENV RABBITMQ_PLUGINS_DIR /usr/lib/rabbitmq/plugins
+ENV RABBITMQ_PLUGINS_DIR $RABBITMQ_HOME/plugins
 
 # delay plugin
 RUN wget https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases/download/v${RABBITMQ_VERSION}/rabbitmq_delayed_message_exchange-${RABBITMQ_VERSION}.ez  -O ${RABBITMQ_PLUGINS_DIR}/rabbitmq_delayed_message_exchange-${RABBITMQ_VERSION}.ez
 RUN rabbitmq-plugins enable rabbitmq_delayed_message_exchange
-
-
 
 COPY cre /cre
 WORKDIR /cre/
