--- a/creRabbitmq/Dockerfile
+++ b/creRabbitmq/Dockerfile
@@ -36,10 +36,10 @@ RUN wget -O- https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.a
 RUN wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -
 
 #--- Ubuntu 20.04 ---
-# echo "deb https://dl.bintray.com/rabbitmq-erlang/debian focal erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
+RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian focal erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
 
 # --- Ubuntu 18.04 ---
-RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian bionic erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
+# RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian bionic erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
 
 
 RUN apt update  -y  && apt install  -y rabbitmq-server
