where is the plugin dir???

--- a/creRabbitmq/Dockerfile
+++ b/creRabbitmq/Dockerfile
@@ -52,6 +52,16 @@ RUN rabbitmq-plugins enable rabbitmq_management
 
 RUN rabbitmq-plugins list
 ## RUN rabbitmq-plugins directories -s
+RUN rabbitmq-diagnostics help
+RUN rabbitmq-diagnostics status --help
+#rabbitmqctl add_user "a-user" "a-pa$$w0rd"
+RUN which rabbitmq-plugins
+RUN rabbitmqctl environment
+
+RUN ls -l /
+RUN ls -l /usr
+RUN ls -l /var
+
 
 
 COPY cre /cre
