plugins dir found!

--- a/creRabbitmq/Dockerfile
+++ b/creRabbitmq/Dockerfile
@@ -68,6 +68,7 @@ RUN which rabbitmq-plugins
 #RUN ls -l /usr/lib/rabbitmq/bin
 #RUN ls -l /usr/lib/rabbitmq/lib
 RUN ls -l /usr/lib/rabbitmq/lib/rabbitmq_server-3.8.2
+RUN ls -l /usr/lib/rabbitmq/lib/rabbitmq_server-3.8.2/plugins
 #RUN ls -l /var
 #RUN ls -l /var/local  #empty
 #RUN ls -l /var/lib
